--- a/src/app/colleges/colleges.component.html
+++ b/src/app/colleges/colleges.component.html
@@ -1,5 +1,13 @@
 <div class="container">
-  <div>
+  <div *ngIf="searching === true">
+    <div class="text-center">
+      <div class="spinner-grow" role="status">
+        <span class="sr-only">Loading...</span>
+      </div>
+    </div>
+  </div>
+
+  <div *ngIf="searching === false">
     <form [formGroup]="form" (ngSubmit)="submit(form)">
       <div class="form-group">
         <select
