--- a/src/app/student-details/student-details.component.html
+++ b/src/app/student-details/student-details.component.html
@@ -8,7 +8,7 @@
   </div>
 
   <div *ngIf="searching === false">
-    <div *ngFor="let student of students" class="card" style="width: 50%">
+    <div *ngFor="let student of students" class="card">
       <div class="text-center">
         <img
           *ngIf="student.gender === 'female'"
