--- a/src/app/students/students.component.css
+++ b/src/app/students/students.component.css
@@ -7,3 +7,12 @@ td span.name:hover {
   color: blue;
   cursor: pointer;
 }
+
+.table {
+  box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
+  transition: 0.3s;
+}
+
+.table:hover {
+  box-shadow: 0 8px 16px 0 rgba(0, 0, 0, 0.2);
+}
