--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -11,8 +11,8 @@
           <h5 class="card-title px-4 pt-4">Students</h5>
           <div class="card-body">
             <p class="card-text">
-              This is the list of departments in the college & students in
-              various departments.
+              This is the list of colleges, department & students who have are
+              studying currently in their respective colleges.
             </p>
             <div class="d-flex justify-content-between align-items-center">
               <div class="btn-group">
@@ -28,30 +28,33 @@
           </div>
         </div>
       </div>
-      <!-- <div class="col-md-4">
+      <div class="col-md-4">
         <div class="card mb-4 h-100">
           <img
             src="https://images.unsplash.com/photo-1462536943532-57a629f6cc60?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=1052&q=80"
             class="card-img-top"
             alt="Graduated"
           />
-          <h5 class="card-title px-4 pt-4">Graduated Students</h5>
+          <h5 class="card-title px-4 pt-4">Graduates</h5>
           <div class="card-body">
             <p class="card-text">
-              This is a wider card with supporting text below as a natural
-              lead-in to additional content. This content is a little bit
-              longer.
+              This is the list of colleges, department & students who have
+              graduated from their respective colleges.
             </p>
             <div class="d-flex justify-content-between align-items-center">
               <div class="btn-group">
-                <button type="button" class="btn btn-sm btn-outline-secondary">
+                <button
+                  type="button"
+                  class="btn btn-sm btn-outline-secondary"
+                  routerLink="/graduates"
+                >
                   View
                 </button>
               </div>
             </div>
           </div>
         </div>
-      </div> -->
+      </div>
     </div>
   </div>
 </div>
